--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,15 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
-		
+	
+		{
+			"name": "Python: Main File",
+			"type": "python",
+			"request": "launch",
+			"program": "C:\\Users\\pawfi\\Desktop\\Python\\Atlas of dreams\\GitHub\\app\\main.py",
+			"console": "integratedTerminal",
+			"justMyCode": true
+		},
 		{
 			"name": "Python: Current File",
 			"type": "python",
